tree-sitter-multippl/test/corpus/sampling.txt
======================
sampling: adding
======================

sample {
  (1.0 + 1.0) / 5.0
}

---

    (source_file
      (program
        (sexpr
          (sanf
            (sanfbinop
              (sanf
                (sanf
                  (sanfbinop
                    (sanf
                      (svalue
                        (float)))
                    (numeric_op)
                    (sanf
                      (svalue
                        (float))))))
              (numeric_op)
              (sanf
                (svalue
                  (float))))))))

======================
sampling: simple
======================

sample {
  x <- true;
  x
}

---

    (source_file
      (program
        (sexpr
          (slet
            (identifier)
            (sexpr
              (sanf
                (svalue
                  (bool))))
            (sexpr
              (sanf
                (identifier)))))))

======================
sample: typed trivial
======================

sample {
  x <- true : Bool;
  x : Bool
}

---


    (source_file
      (program
        (sexpr
          (slet
            (identifier)
            (sexpr
              (sann
                (sexpr
                  (sanf
                    (svalue
                      (bool))))
                (sty
                  (tyBool))))
            (sexpr
              (sann
                (sexpr
                  (sanf
                    (identifier)))
                (sty
                  (tyBool))))))))

======================
sample: trivial with vec
======================

sample {
  x <- [true, false];
  x : [Bool]
}

---


    (source_file
      (program
        (sexpr
          (slet
            (identifier)
            (sexpr
              (sanf
                (sanfvec
                   (sanf
                      (svalue
                        (bool)))
                   (sanf
                      (svalue
                        (bool))))))
            (sexpr
              (sann
                (sexpr
                  (sanf
                    (identifier)))
                (sty
                  (tyVec
                    (sty
                      (tyBool))))))))))
================
sample: multimodal
================
sample {
  m ~ bern(0.5);
  if m {
    ~normal(1.0, 0.5)
  } else {
    ~normal(-1.0, 0.5)
  }
}
----------
    (source_file
      (program
        (sexpr
          (sletsample
            (identifier)
            (sexpr
              (sanf
                (sanfbern
                  (sanf
                    (svalue
                      (float))))))
            (sexpr
              (site
                (sanf
                  (identifier))
                (sexpr
                  (ssample
                    (sexpr
                      (sanf
                        (sanfnormal
                          (sanf
                            (svalue
                              (float)))
                          (sanf
                            (svalue
                              (float))))))))
                (sexpr
                  (ssample
                    (sexpr
                      (sanf
                        (sanfnormal
                          (sanf
                            (svalue
                              (float)))
                          (sanf
                            (svalue
                              (float))))))))))))))

======================
sample: healthcare
======================

sample {
  age ~ discrete(0.35, 0.45, 0.20);
  preExistingCond ~
    if (age == 0) {
      discrete(0.88, 0.10, 0.20)
    } else if (age == 1) {
      discrete(0.75, 0.20, 0.05)
    } else {
      discrete(0.42, 0.53, 0.05)
    };
  outpatientExpenditure ~
    if (age == 0) {
      normal( 60.0,  100.0)
    } else if (age == 1) {
      normal(180.0,  400.0)
    } else {
      normal(360.0, 1600.0)
    };
  anyHospitalStay ~
    if (age == 0) {
      bern( 0.1 )
    } else if (age == 1) {
      bern( 0.25 )
    } else {
      bern( 0.40 )
    };
  daysHospitalStay ~
    if (!anyHospitalStay) {
      0.0
    } else {
      if (age == 0) {
        ~normal( 1.0, 0.25)
      } else if (age == 1) {
        ~normal( 4.0, 1.00)
      } else {
        ~normal( 7.0, 2.25)
      }
    };
  inpatientExpenditure ~
    if (preExistingCond == 0) {
      normal( 100 + (300 * daysHospitalStay), 30 ** 2 )
    } else if (preExistingCond == 1) {
      normal( 100 + (550 * daysHospitalStay), 50 ** 2 )
    } else {
      normal( 100 + (800 * daysHospitalStay), 100 ** 2 )
    };
  taxes ~ normal(120 + (1.02 * inpatientExpenditure) + (1.05 * outpatientExpenditure), 10 ** 2);
  taxes
}

----------
    (source_file
      (program
        (sexpr
          (sletsample
            (identifier)
            (sexpr
              (sanf
                (sanfdiscrete
                  (sanf
                    (svalue
                      (float)))
                  (sanf
                    (svalue
                      (float)))
                  (sanf
                    (svalue
                      (float))))))
            (sexpr
              (sletsample
                (identifier)
                (sexpr
                  (site
                    (sanf
                      (sanf
                        (sanfbinop
                          (sanf
                            (identifier))
                          (compare_op)
                          (sanf
                            (svalue
                              (int))))))
                    (sexpr
                      (sanf
                        (sanfdiscrete
                          (sanf
                            (svalue
                              (float)))
                          (sanf
                            (svalue
                              (float)))
                          (sanf
                            (svalue
                              (float))))))
                    (site
                      (sanf
                        (sanf
                          (sanfbinop
                            (sanf
                              (identifier))
                            (compare_op)
                            (sanf
                              (svalue
                                (int))))))
                      (sexpr
                        (sanf
                          (sanfdiscrete
                            (sanf
                              (svalue
                                (float)))
                            (sanf
                              (svalue
                                (float)))
                            (sanf
                              (svalue
                                (float))))))
                      (sexpr
                        (sanf
                          (sanfdiscrete
                            (sanf
                              (svalue
                                (float)))
                            (sanf
                              (svalue
                                (float)))
                            (sanf
                              (svalue
                                (float)))))))))
                (sexpr
                  (sletsample
                    (identifier)
                    (sexpr
                      (site
                        (sanf
                          (sanf
                            (sanfbinop
                              (sanf
                                (identifier))
                              (compare_op)
                              (sanf
                                (svalue
                                  (int))))))
                        (sexpr
                          (sanf
                            (sanfnormal
                              (sanf
                                (svalue
                                  (float)))
                              (sanf
                                (svalue
                                  (float))))))
                        (site
                          (sanf
                            (sanf
                              (sanfbinop
                                (sanf
                                  (identifier))
                                (compare_op)
                                (sanf
                                  (svalue
                                    (int))))))
                          (sexpr
                            (sanf
                              (sanfnormal
                                (sanf
                                  (svalue
                                    (float)))
                                (sanf
                                  (svalue
                                    (float))))))
                          (sexpr
                            (sanf
                              (sanfnormal
                                (sanf
                                  (svalue
                                    (float)))
                                (sanf
                                  (svalue
                                    (float)))))))))
                    (sexpr
                      (sletsample
                        (identifier)
                        (sexpr
                          (site
                            (sanf
                              (sanf
                                (sanfbinop
                                  (sanf
                                    (identifier))
                                  (compare_op)
                                  (sanf
                                    (svalue
                                      (int))))))
                            (sexpr
                              (sanf
                                (sanfbern
                                  (sanf
                                    (svalue
                                      (float))))))
                            (site
                              (sanf
                                (sanf
                                  (sanfbinop
                                    (sanf
                                      (identifier))
                                    (compare_op)
                                    (sanf
                                      (svalue
                                        (int))))))
                              (sexpr
                                (sanf
                                  (sanfbern
                                    (sanf
                                      (svalue
                                        (float))))))
                              (sexpr
                                (sanf
                                  (sanfbern
                                    (sanf
                                      (svalue
                                        (float)))))))))
                        (sexpr
                          (sletsample
                            (identifier)
                            (sexpr
                              (site
                                (sanf
                                  (sanf
                                    (sanfunop
                                      (bool_unop)
                                      (sanf
                                        (identifier)))))
                                (sexpr
                                  (sanf
                                    (svalue
                                      (float))))
                                (sexpr
                                  (site
                                    (sanf
                                      (sanf
                                        (sanfbinop
                                          (sanf
                                            (identifier))
                                          (compare_op)
                                          (sanf
                                            (svalue
                                              (int))))))
                                    (sexpr
                                      (ssample
                                        (sexpr
                                          (sanf
                                            (sanfnormal
                                              (sanf
                                                (svalue
                                                  (float)))
                                              (sanf
                                                (svalue
                                                  (float))))))))
                                    (site
                                      (sanf
                                        (sanf
                                          (sanfbinop
                                            (sanf
                                              (identifier))
                                            (compare_op)
                                            (sanf
                                              (svalue
                                                (int))))))
                                      (sexpr
                                        (ssample
                                          (sexpr
                                            (sanf
                                              (sanfnormal
                                                (sanf
                                                  (svalue
                                                    (float)))
                                                (sanf
                                                  (svalue
                                                    (float))))))))
                                      (sexpr
                                        (ssample
                                          (sexpr
                                            (sanf
                                              (sanfnormal
                                                (sanf
                                                  (svalue
                                                    (float)))
                                                (sanf
                                                  (svalue
                                                    (float)))))))))))))
                            (sexpr
                              (sletsample
                                (identifier)
                                (sexpr
                                  (site
                                    (sanf
                                      (sanf
                                        (sanfbinop
                                          (sanf
                                            (identifier))
                                          (compare_op)
                                          (sanf
                                            (svalue
                                              (int))))))
                                    (sexpr
                                      (sanf
                                        (sanfnormal
                                          (sanf
                                            (sanfbinop
                                              (sanf
                                                (svalue
                                                  (int)))
                                              (numeric_op)
                                              (sanf
                                                (sanf
                                                  (sanfbinop
                                                    (sanf
                                                      (svalue
                                                        (int)))
                                                    (numeric_op)
                                                    (sanf
                                                      (identifier)))))))
                                          (sanf
                                            (sanfbinop
                                              (sanf
                                                (svalue
                                                  (int)))
                                              (numeric_op)
                                              (sanf
                                                (svalue
                                                  (int))))))))
                                    (site
                                      (sanf
                                        (sanf
                                          (sanfbinop
                                            (sanf
                                              (identifier))
                                            (compare_op)
                                            (sanf
                                              (svalue
                                                (int))))))
                                      (sexpr
                                        (sanf
                                          (sanfnormal
                                            (sanf
                                              (sanfbinop
                                                (sanf
                                                  (svalue
                                                    (int)))
                                                (numeric_op)
                                                (sanf
                                                  (sanf
                                                    (sanfbinop
                                                      (sanf
                                                        (svalue
                                                          (int)))
                                                      (numeric_op)
                                                      (sanf
                                                        (identifier)))))))
                                            (sanf
                                              (sanfbinop
                                                (sanf
                                                  (svalue
                                                    (int)))
                                                (numeric_op)
                                                (sanf
                                                  (svalue
                                                    (int))))))))
                                      (sexpr
                                        (sanf
                                          (sanfnormal
                                            (sanf
                                              (sanfbinop
                                                (sanf
                                                  (svalue
                                                    (int)))
                                                (numeric_op)
                                                (sanf
                                                  (sanf
                                                    (sanfbinop
                                                      (sanf
                                                        (svalue
                                                          (int)))
                                                      (numeric_op)
                                                      (sanf
                                                        (identifier)))))))
                                            (sanf
                                              (sanfbinop
                                                (sanf
                                                  (svalue
                                                    (int)))
                                                (numeric_op)
                                                (sanf
                                                  (svalue
                                                    (int)))))))))))
                                (sexpr
                                  (sletsample
                                    (identifier)
                                    (sexpr
                                      (sanf
                                        (sanfnormal
                                          (sanf
                                            (sanfbinop
                                              (sanf
                                                (sanfbinop
                                                  (sanf
                                                    (svalue
                                                      (int)))
                                                  (numeric_op)
                                                  (sanf
                                                    (sanf
                                                      (sanfbinop
                                                        (sanf
                                                          (svalue
                                                            (float)))
                                                        (numeric_op)
                                                        (sanf
                                                          (identifier)))))))
                                              (numeric_op)
                                              (sanf
                                                (sanf
                                                  (sanfbinop
                                                    (sanf
                                                      (svalue
                                                        (float)))
                                                    (numeric_op)
                                                    (sanf
                                                      (identifier)))))))
                                          (sanf
                                            (sanfbinop
                                              (sanf
                                                (svalue
                                                  (int)))
                                              (numeric_op)
                                              (sanf
                                                (svalue
                                                  (int))))))))
                                    (sexpr
                                      (sanf
                                        (identifier)))))))))))))))))))

======================
sample(hybrid): healthcare
======================
sample {
  aph <- exact {
    let age = discrete(0.35, 0.45, 0.20) in
    let preExistingCond =
      if age == 0 then discrete(0.88, 0.10, 0.20) else
      if age == 1 then discrete(0.75, 0.20, 0.05) else
                       discrete(0.42, 0.53, 0.05) in
    let anyHospitalStay =
      if (age == 0) then flip( 0.1 ) else
      if (age == 1) then flip( 0.25 ) else
                         flip( 0.40 ) in
    (age, preExistingCond, anyHospitalStay)
  };
  age <- aph[0];
  preExistingCond <- aph[1];
  anyHospitalStay <- aph[2];

  outpatientExpenditure ~
    if (age == 0) {
      normal( 60.0,  100.0)
    } else if (age == 1) {
      normal(180.0,  400.0)
    } else {
      normal(360.0, 1600.0)
    };

  daysHospitalStay <-
    if (!anyHospitalStay) {
      0.0
    } else {
      if (age == 0) {
        ~normal( 1.0, 0.25)
      } else if (age == 1) {
        ~normal( 4.0, 1.00)
      } else {
        ~normal( 7.0, 2.25)
      }
    };
  inpatientExpenditure ~
    if (preExistingCond == 0) {
      normal( 100 + (300 * daysHospitalStay), 30 ** 2 )
    } else if (preExistingCond == 1) {
      normal( 100 + (550 * daysHospitalStay), 50 ** 2 )
    } else {
      normal( 100 + (800 * daysHospitalStay), 100 ** 2 )
    };
  taxes ~ normal(120 + (1.02 * inpatientExpenditure) + (1.05 * outpatientExpenditure), 10 ** 2);
  taxes
}

----------


    (source_file
      (program
        (sexpr
          (slet
            (identifier)
            (sexpr
              (sexact
                (eexpr
                  (elet
                    (identifier)
                    (eexpr
                      (ediscrete
                        (eanf
                          (evalue
                            (float)))
                        (eanf
                          (evalue
                            (float)))
                        (eanf
                          (evalue
                            (float)))))
                    (eexpr
                      (elet
                        (identifier)
                        (eexpr
                          (eite
                            (eanf
                              (eanfbinop
                                (eanf
                                  (identifier))
                                (compare_op)
                                (eanf
                                  (evalue
                                    (int)))))
                            (eexpr
                              (ediscrete
                                (eanf
                                  (evalue
                                    (float)))
                                (eanf
                                  (evalue
                                    (float)))
                                (eanf
                                  (evalue
                                    (float)))))
                            (eexpr
                              (eite
                                (eanf
                                  (eanfbinop
                                    (eanf
                                      (identifier))
                                    (compare_op)
                                    (eanf
                                      (evalue
                                        (int)))))
                                (eexpr
                                  (ediscrete
                                    (eanf
                                      (evalue
                                        (float)))
                                    (eanf
                                      (evalue
                                        (float)))
                                    (eanf
                                      (evalue
                                        (float)))))
                                (eexpr
                                  (ediscrete
                                    (eanf
                                      (evalue
                                        (float)))
                                    (eanf
                                      (evalue
                                        (float)))
                                    (eanf
                                      (evalue
                                        (float)))))))))
                        (eexpr
                          (elet
                            (identifier)
                            (eexpr
                              (eite
                                (eanf
                                  (eanf
                                    (eanfbinop
                                      (eanf
                                        (identifier))
                                      (compare_op)
                                      (eanf
                                        (evalue
                                          (int))))))
                                (eexpr
                                  (eflip
                                    (eanf
                                      (eanf
                                        (evalue
                                          (float))))))
                                (eexpr
                                  (eite
                                    (eanf
                                      (eanf
                                        (eanfbinop
                                          (eanf
                                            (identifier))
                                          (compare_op)
                                          (eanf
                                            (evalue
                                              (int))))))
                                    (eexpr
                                      (eflip
                                        (eanf
                                          (eanf
                                            (evalue
                                              (float))))))
                                    (eexpr
                                      (eflip
                                        (eanf
                                          (eanf
                                            (evalue
                                              (float))))))))))
                            (eexpr
                              (eanf
                                (eanfprod
                                  (eanf
                                    (identifier))
                                  (eanf
                                    (identifier))
                                  (eanf
                                    (identifier)))))))))))))
            (sexpr
              (slet
                (identifier)
                (sexpr
                  (sanf
                    (sanfprj
                      (identifier)
                      (sanf
                        (svalue
                          (int))))))
                (sexpr
                  (slet
                    (identifier)
                    (sexpr
                      (sanf
                        (sanfprj
                          (identifier)
                          (sanf
                            (svalue
                              (int))))))
                    (sexpr
                      (slet
                        (identifier)
                        (sexpr
                          (sanf
                            (sanfprj
                              (identifier)
                              (sanf
                                (svalue
                                  (int))))))
                        (sexpr
                          (sletsample
                            (identifier)
                            (sexpr
                              (site
                                (sanf
                                  (sanf
                                    (sanfbinop
                                      (sanf
                                        (identifier))
                                      (compare_op)
                                      (sanf
                                        (svalue
                                          (int))))))
                                (sexpr
                                  (sanf
                                    (sanfnormal
                                      (sanf
                                        (svalue
                                          (float)))
                                      (sanf
                                        (svalue
                                          (float))))))
                                (site
                                  (sanf
                                    (sanf
                                      (sanfbinop
                                        (sanf
                                          (identifier))
                                        (compare_op)
                                        (sanf
                                          (svalue
                                            (int))))))
                                  (sexpr
                                    (sanf
                                      (sanfnormal
                                        (sanf
                                          (svalue
                                            (float)))
                                        (sanf
                                          (svalue
                                            (float))))))
                                  (sexpr
                                    (sanf
                                      (sanfnormal
                                        (sanf
                                          (svalue
                                            (float)))
                                        (sanf
                                          (svalue
                                            (float)))))))))
                            (sexpr
                              (slet
                                (identifier)
                                (sexpr
                                  (site
                                    (sanf
                                      (sanf
                                        (sanfunop
                                          (bool_unop)
                                          (sanf
                                            (identifier)))))
                                    (sexpr
                                      (sanf
                                        (svalue
                                          (float))))
                                    (sexpr
                                      (site
                                        (sanf
                                          (sanf
                                            (sanfbinop
                                              (sanf
                                                (identifier))
                                              (compare_op)
                                              (sanf
                                                (svalue
                                                  (int))))))
                                        (sexpr
                                          (ssample
                                            (sexpr
                                              (sanf
                                                (sanfnormal
                                                  (sanf
                                                    (svalue
                                                      (float)))
                                                  (sanf
                                                    (svalue
                                                      (float))))))))
                                        (site
                                          (sanf
                                            (sanf
                                              (sanfbinop
                                                (sanf
                                                  (identifier))
                                                (compare_op)
                                                (sanf
                                                  (svalue
                                                    (int))))))
                                          (sexpr
                                            (ssample
